--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	margin: 0;
+	font-family: "Fira Code";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+	position: absolute;
+	background: #000000;
+	width: 100%;
+	height: 100%;
+	max-height: 100vh;
+	max-width: 100vw;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
+
+.components {
+	margin: 2vh;
+	border: 0.5px solid #333436;
+	border-radius: 6px;
+	width: calc(100% - 4vh);
+	height: calc(100% - 4vh);
+	background: #011627;
+}
+*:before,
+*:after {
+	box-sizing: border-box;
+}
+
+a {
+	text-decoration: none !important;
+	color: #ffffff;
+}
+
+.link-class,
+.link-class > span {
+	position: relative;
+	color: inherit;
+	text-decoration: none;
+	line-height: 24px;
+}
+
+.link-class:hover {
+	text-decoration: none;
+}
+
+.link-class:before,
+.link-class:after,
+.link-class > span:before,
+.link-class > span:after {
+	content: "";
+	position: absolute;
+	transition: transform 0.5s ease;
+}
+
+.link-class:link {
+	padding-top: 10px;
+}
+
+.link-class:link:before {
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 2px;
+	background: #e99287;
+	transform: scaleX(0);
+}
+.link-class:link:hover:before {
+	transform: scaleX(1);
+}
+
+::-moz-selection {
+	/* Code for Firefox */
+	color: #fff;
+	background: #43d9ad;
+}
+
+::selection {
+	color: #fff;
+	background: #43d9ad;
 }
