--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -1,7 +1,33 @@
 .about-container {
-	border: 2px solid red;
-	width: 100%;
-	height: 100%;
-	left: inherit;
-	right: inherit;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	height: calc(100% - 10vh);
+}
+
+.about-container-file-structure {
+	border-right: 0.5px solid #333436;
+	padding: 0;
+}
+.about-container-code {
+	border-right: 0.5px solid #333436;
+}
+.about-container-file-structure-title {
+	border-bottom: 0.5px solid #333436;
+	min-height: 40vh;
+}
+.about-container-file-structure-title-heading {
+	color: #ffffff;
+	border-bottom: 0.5px solid #333436;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	padding-bottom: 0.8vh;
+	margin-left: 1vw;
+}
+.about-container-file-structure-title-heading .icon {
+	margin-right: 1vw;
+}
+
+.fs {
+	color: #ffffff;
 }
